2008-06-26  Esteban Sanchez  <estebans@artica.es>

	* ajax.php: Sed id_user in config array.

	* godmode/menu.php, general/header.php, operation/menu.php: Replaced
	lang_label with lang_string().

	* general/logon_ok.php: Reduced one indentation level.

	* godmode/agentes/agent_manager.php: Replaced lang_label with
	lang_string(). Use pandora functions.

	* include/functions_html.php, godmode/agentes/configurar_agente.php:
	Tab and blankspaces style correction.

	* godmode/reporting/map_builder.php: Complete rewritten to provide an
	intuitive way of build the maps. It's cool, useful and very simple.

	* godmode/reporting/reporting_builder.php: Deleted an output debug.

	* godmode/setup/setup.php: Rewritten to use pandora functions. Added a
	colorpicker for color settings.

	* include/config.php: Reset pandora password. We must solve things
	with this file...

	* include/functions.php: Check if input is an array on safe_input().
	Use filename as id in array returned by list_files().

	* include/functions_db.php: Renamed return_coordinate_* functions.
	Style correction.

	* include/javascript/jquery.js: Updated to 1.2.6.

	* include/javascript/jquery.ui.datepicker.js: Code minimized.
	
	* include/javascript/pandora.js: Style correction.

	* include/javascript/wz_jsgraphics.js: Added a class to the elements
	of a line, so it can be modified using javascript.

	* /include/styles/pandora.css: Added style to some tables dropdowns.
	Added new styles relative to visual map editor.

	* operation/reporting/reporting_viewer.php: Style correction. Added
	jQuery UI.

	* operation/visual_console/index.php: Use Pandora functions.

	* operation/visual_console/render_view.php: Drawing the map is now on
	functions_visual_map.php. Added a countdown if a refresh time is set.
	Use pandora functions. Style correction.

	* reporting/fgraph.php: Style correction. Use graphic_error() if
	there's no data on grafico_modulo_sparse().
